--- a/articles.html
+++ b/articles.html
@@ -77,6 +77,15 @@
       });
     });
   </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8YK502VTQN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8YK502VTQN');
+</script>
 </body>
 </html>
   <footer>
@@ -85,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
