--- a/about.html
+++ b/about.html
@@ -61,12 +61,22 @@
         menuToggle.classList.toggle('active');
     });
     </script>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8YK502VTQN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8YK502VTQN');
+</script>
   <footer>
     <p>© 2025 Civic Economica | Created by Ellie Nenguke</p>
   </footer>
 </body>
 
 </html>
+
 
 
 
