--- a/The_Digital_Border_Within.html
+++ b/The_Digital_Border_Within.html
@@ -68,3 +68,12 @@
       <p>
        As the UK moves toward a digital-first verification system, the balance between efficiency, security and social equity will be critical. Digital IDs promise transparency and stronger borders, but they also risk deepening inequalities and placing pressure on sectors that already face labour shortages. In pursuing a cleaner, more traceable economy, the government must ensure that those who keep Britain running are not left behind. The success of digital IDs will depend not just on technology, but on policies that support inclusion and mitigate unintended economic and social consequences. 
       </p>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8YK502VTQN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8YK502VTQN');
+</script>
