--- a/ATransatlanticGreenWave.html
+++ b/ATransatlanticGreenWave.html
@@ -60,3 +60,13 @@
       <p>
        As both the United States and the United Kingdom confront rising inequality, climate pressures, and generational divides, the political parallel between Mamdani’s New York and Polanski’s Green Party suggests a potential shift in what is electorally achievable. Bold policies, youth engagement, and grassroots mobilisation may now define the contours of a new left-wing political landscape. 
       </p>
+
+      <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8YK502VTQN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8YK502VTQN');
+</script>
