--- a/ATransatlanticGreenWave.html
+++ b/ATransatlanticGreenWave.html
@@ -58,7 +58,7 @@
       </p>
 
       <p>
-       As both the United States and the United Kingdom confront rising inequality, climate pressures, and generational divides, the political parallel between Mamdani’s New York and Polanski’s Green Party suggests a potential shift in what is electorally achievable. Bold policies, youth engagement, and grassroots mobilisation may now define the contours of a new left-wing political landscape. 
+       As both the United States and the United Kingdom confront rising inequality, climate pressures and generational divides, the political parallel between Mamdani’s New York and Polanski’s Green Party suggests a potential shift in what is electorally achievable. Bold policies, youth engagement and grassroots mobilisation may now define the contours of a new left-wing political landscape. 
       </p>
 
       <!-- Google tag (gtag.js) -->
