--- a/ATransatlanticGreenWave.html
+++ b/ATransatlanticGreenWave.html
@@ -1,3 +1,6 @@
+theme: jekyll-theme-minimal
+title: Hompage
+description: Civic Economica is a personal project dedicated to unpacking complex economic and political topics in a clear, original, and accessible way. It is updated fortnightly and crafted for readers who seek depth without unnecessary jargon.
 <!DOCTYPE html>
 <html lang="en">
 <head>
